--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@supabase/supabase-js": "^2.49.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
