--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.49.1",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.487.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
