--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.49.1",
+    "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
