--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@sentry/nextjs": "^9.14.0",
     "@supabase/supabase-js": "^2.49.1",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
