--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "jsdoc": "^4.0.4"
+    "jsdoc": "^4.0.4",
+    "typescript": "^5.8.3"
   }
 }
